--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
+    "serverless-http": "^2.7.0",
     "typescript": "^4.2.4",
     "yarn": "^1.22.10"
   },
